<resources>

    <string name="app_name">Tres en raya</string>

    <string name="un_jugador">1 jugador</string>
    <string name="dos_jugadores">2 jugadores</string>

    <string name="facil">Fácil</string>
    <string name="normal">Normal</string>
    <string name="imposible">Imposible</string>

    <string name="gana_jugador1">JUGADOR 1 GANA!</string>
    <string name="gana_jugador2">JUGADOR 2 GANA!</string>
    <string name="empate">EMPATE</string>

</resources>
